<resources>
    <string name="app_name">SleepRight</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_underlined"><u>Sign Up</u></string>
    <string name="welcome">"Welcome !"</string>
    <string name="forgot_password_underlined"><u>Forgot password?</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Settings</string>
    <string name="title_help">Help</string>

    <!-- Strings related to login -->
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_underlined"><u>Sign in</u></string>
    <string name="back_to_sign_in_underlined"><u>Back to sign in</u></string>
    <string name="prompt_verify_password">Verify Password</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Strings related to GoogleLoginActivity -->
    <string name="button_cancel">Cancel</string>
    <string name="button_import">Import</string>
    <string name="status_text">Status</string>
    <string name="item_count">Count: 0</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="button_google_sign_in">Sign In With Google</string>
    <string name="button_sign_out">Sign Out</string>

    <!-- Button titles -->
    <string name="button_google_fit">Link Google Fit</string>
    <string name="button_change_email">Change Email</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_delete_data">Clear Data</string>
    <string name="button_log_out">Log Out</string>
    <string name="button_delete_account">Delete Account</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--Strings related to profile-->
    <string name="title_change_email">Change Email</string>
    <string name="button_save_email">Save</string>
    <string name="prompt_new_email">New Email</string>
    <string name="title_change_password">Change Password</string>
    <string name="string_current_password">Current Password</string>
    <string name="string_new_password">New Password</string>
    <string name="string_confirm_new_password">Confirm New Password</string>
    <string name="string_save">Save</string>
    <string name="title_delete_account">Are you sure?</string>
    <string name="string_deletion_info">All of your account data will be permanently deleted. This cannot be undone.</string>
    <string name="string_deletion_info2">Enter your password to confirm:</string>
    <string name="string_delete_everything">Delete</string>
    <string name="string_cancel">Cancel</string>

    <!--Strings related to setting-->
    <string name="integration_header">Integration</string>
    <string name="sleep_header">Sleep</string>
    <string name="google_fit_title">Google Fit</string>
    <string name="google_calendar_title">Google Calendar</string>
    <string name="wearables_title">Wearables</string>
    <string-array name="times_array">
        <item>30 min</item>
        <item>1 hour</item>
        <item>1 hour 30 min</item>
        <item>2 hours</item>
        <item>2 hours 30 min</item>
        <item>3 hours</item>
        <item>3 hours 30 min</item>
        <item>4 hours</item>
        <item>4 hours 30 min</item>
        <item>5 hours</item>
        <item>5 hours 30 min</item>
        <item>6 hours</item>
        <item>6 hours 30 min</item>
        <item>7 hours</item>
        <item>7 hours 30 min</item>
        <item>8 hours</item>
        <item>8 hours 30 min</item>
        <item>9 hours</item>
        <item>9 hours 30 min</item>
        <item>10 hours</item>
        <item>10 hours 30 min</item>
        <item>11 hours</item>
        <item>11 hours 30 min</item>
        <item>12 hours</item>
        <item>12 hours 30 min</item>
        <item>13 hours</item>
        <item>13 hours 30 min</item>
    </string-array>

</resources>